style.css
html{
	position: relative;
	min-height: 100%;
}

body{
	font-family: 'Montserrat', sans-serif;
}

.static-bg{  
	/* background-image: url('media/ring.png'); */
	background-attachment: fixed;
	background-size: auto 100%;
	background-repeat: repeat;
}

.nav{
	color: black;
	text-decoration: none;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

.nav:hover{
	text-decoration: underline;
}

.selected{
	text-decoration: underline;
}

.nav:hover{
	color: rgb(210,210,210);
	text-shadow: 2px 2px black;
}

.nav.selected{
	color: rgb(200,200,200);
	text-shadow: 2px 2px black;
}

.body-text{
	display: inline-flex;
	width: 100%;
	justify-content: center;
}

.socials{
	position: absolute;
	text-align: center;
	left: 50%;
	bottom: 1%;
	transform: translate(-50%,-50%);
	width: 100%;
	padding-top: 2%;
	padding-bottom: 2%;
}

.socials:hover {
	background-color: rgba(255,255,255,0.4);
}

.socials img{
	width: 3.5vh;
	height: 3.5vh;
	padding-left: 0.4%;
	padding-right: 0.4%;
	-webkit-transition: all 0.2s ease;
    -moz-transition: all 0.2s ease;
    -o-transition: all 0.2s ease;
    transition: all 0.2s ease;
}

.socials img:hover{
	width: 5vh;
	height: 5vh;
}

canvas{
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	z-index: -10000;
}

/*=====LANDING PAGE CSS=====*/

.landing{
	font-family: 'Montserrat', sans-serif;
	text-align: center;
	position: absolute;
	width: 99%;
	/* left: 50%; */
	/* transform: translate(-50%,0); */
	-webkit-transition: all 0.1s ease;
    -moz-transition: all 0.1s ease;
    -o-transition: all 0.1s ease;
    transition: all 0.1s ease;
}

.landing h1{
	transition: 0.5s;
	font-size: 7vh;
	line-height: 0.9;
}

.landing:hover {
	background-color: rgba(255,255,255,0.4);
}

@media (max-width: 1000px) {
    .landing{
		background-color: rgba(255,255,255,0.5);
	}
}

.landing p{
	font-size: 2vh;
}

.landing.selected {
	text-decoration: none;
}

.landing a{
	color: black;
	/* transition: 0.5s; */
}

.landing .landing-link:hover{
	text-shadow: 0.1vh 0.05vh rgba(25,25,25,0.5);
}


/*=====ABOUT PAGE CSS=====*/
#mike{
	font-size: 0.6em;
}

.about{
	width: 100%;
	font-family: 'Montserrat', sans-serif;
}

.par{
	font-size: 1.1em;
	margin-top: 5%;
	margin-bottom: 10%;
	padding: 2%;
	width: 40%;
	text-align: left;
	/* background-color: rgba(250,250,250,0.8); */
	border-radius: 1%;
	line-height: 3vh;
	/* border-style: dashed; */
}

@media (max-width: 1000px) {
    .par{
		width: 80%;
		position: absolute;
		top: 10%;
	}

	.par p{
		line-height: 2.5vh;
		font-size: 1.9vh;
	}
}

.par img{
	max-width: 20%;
	float: right;
	margin-right: 2%;
}

.jumbo{
	font-size: 1.3em;
	font-weight: bold;
}

.myname{
	-webkit-transition: all 0.3s ease;
    -moz-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}

.myname:hover{
	color: #ed58d2;
}

.info{
	width: 100%;
	/*display: flex;
	justify-content: space-between;
	align-items: flex-start;*/
}

.info a{
	color: black;
	-webkit-transition: all 0.3s ease;
    -moz-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}

.info a:hover{
	text-shadow: 0.1vh 0.05vh rgba(250,250,250,0.5);
}

/*=====PROJECT PAGE CSS=====*/
.project-container{
	padding-top: 5%;
	width: 100%;
	height: 80%;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	font-family: 'Montserrat', sans-serif;
}

@media (max-width: 1000px) {
    .project-container{
		height: 60%;
		top: 10%;
		position: absolute;
	}
}

.project{
	display: flex;
	flex-wrap: wrap;
	width: 13vmax;
	padding: 1vmax;
	margin: 1vmax;
	border-radius: 10px;
	cursor: pointer;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    line-height: 0.5;
	border-style: dashed;
	border-width: 0.2vmin;
	background-color: rgba(255,255,255, 0.5);
}

.project:hover{
	background-color: rgba(255,255,255, 0.9);
}

h1{
	text-align: center;
	font-size: 3vh;
}

.project p{
	font-style: italic;
	font-size: 1.3vh;
}

.proj-img-container{
	float: center;
	margin-top: 5%;
	margin-left: auto;
	margin-right: auto;
	width: 12vmax;
	height: 7vmax;
	overflow: hidden;
}

.proj-img-container img{
	float: center;
	max-width: 100%;
}

.proj-text{
	margin-left: auto;
	margin-right: auto;
	width: 14vmax;
	line-height: 1;
}

@media (max-width: 1000px) {
    .proj-text h4{
		font-size: 2vh;
	}
}

.project-popup{
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%,-50%);
	z-index: -696969;
	background: rgba(245,245,245,0.95);
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	visibility: hidden;
	opacity: 0;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

.project-popup.active{
	z-index: 696969;
	visibility: visible;
	opacity: 1;
}

.close{
	position: fixed;
	top: 2%;
	right: 2%;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    cursor: pointer;

}
.close:hover{
	text-shadow: 2px 2px rgb(100,100,100,0.6);
}

.popup-container{
	width: 30%;
	height: 50%;
}

@media (max-width: 1000px) {
    .popup-container{
		width: 80%;
		height: 50%;
	}
}

.popup-container h1{
	width: 100%;
	text-align: left;
}

.popup-container p{
	line-height: 3vh;
	font-size: 1vw;
}

@media (max-width: 1000px) {
    .popup-container p{
		font-size: 2vh;
	}
	.popup-container h5{
		font-size: 2vh;
	}
}

.popup-img{
	float: center;
	margin-top: -15%;
	margin-left: auto;
	margin-right: auto;
	width: 100%;
	overflow: hidden;
}

.popup-img img{
	float: center;
	max-width: 100%;
}

.popup-img.shrink{
	width: 40%;
}

.popup-container a{
	text-decoration: none;
	color: black;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;

}

.projlink:hover{
	text-shadow: 1px 1px rgba(25,25,25,0.5);
}
.codelink:hover{
	text-shadow: 1px 1px rgba(25,25,25,0.5);
}

